<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btnLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/indentation_5"
        android:layout_weight="1"
        android:text="@string/left">
    </Button>
    <Button
        android:id="@+id/btnCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/indentation_5"
        android:layout_weight="1"
        android:text="@string/center">
    </Button>
    <Button
        android:id="@+id/btnRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/indentation_5"
        android:layout_weight="1"
        android:text="@string/right">
    </Button>
</LinearLayout>